# HomeWork_MUSP

Task_10/: CMakeLists.txt  main.cpp
Task_11/: CMakeLists.txt  main.cpp
Task_2/: CMakeLists.txt  main.cpp
Task_2_1/: CMakeLists.txt  TimeMeter.cpp  TimeMeter.h  TimeMeterImplemetation.h  TimeMeter_lin.cpp  TimeMeter_lin.h  TimeMeter_win.cpp  TimeMeter_win.h  main.cpp
Task_4/: CMakeLists.txt  main.cpp
Task_5/: CMakeLists.txt  main.cpp
Task_6/: CMakeLists.txt  main.cpp  text.txt
Task_7/: CMakeLists.txt  conditionals  main.cpp  test.txt
Task_8/: CMakeLists.txt
Task_8_1/: CMakeLists.txt  main.cpp
task_1/: CMakeLists.txt  ForwardList.cpp  ForwardList.h  ForwardListFalse.cpp  ForwardListFalse.h  main.cpp
task_12/: CMakeLists.txt  main.cpp
task_1_1_stack/: CMakeLists.txt  info.txt  main.cpp
untitled/: TimeMeter.h  TimeMeterImplemetation.h  TimeMeter_lin.cpp  TimeMeter_lin.h  TimeMeter_win.cpp  TimeMeter_win.h
